_includes/assets/css/inline.css
/* ... */
button.secondary:hover::before{
	-webkit-mask-position: 0px 0px;
}
/* border image */
button.secondary span.border {
	position: absolute;
    top: -4px; bottom: -4px;
    left: -4px; right: -4px;
	border-radius: 32px;
	background-image:var(--bluegradient);
	mask-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIyODAiIGhlaWdodD0iNTYiIGZpbGw9Im5vbmUiIHZpZXdCb3g9IjAgMCAyODAgNTYiPjxyZWN0IHdpZHRoPSIyNzYiIGhlaWdodD0iNTIiIHg9IjIiIHk9IjIiIHN0cm9rZT0iI2ZmZiIgc3Ryb2tlLXdpZHRoPSI0IiByeD0iMjYiLz48L3N2Zz4=');
	-webkit-mask-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIyODAiIGhlaWdodD0iNTYiIGZpbGw9Im5vbmUiIHZpZXdCb3g9IjAgMCAyODAgNTYiPjxyZWN0IHdpZHRoPSIyNzYiIGhlaWdodD0iNTIiIHg9IjIiIHk9IjIiIHN0cm9rZT0iI2ZmZiIgc3Ryb2tlLXdpZHRoPSI0IiByeD0iMjYiLz48L3N2Zz4=');
	mask-size: 280px 56px;
	-webkit-mask-size: 280px 56px;
	mask-position: 4px 4px;
	-webkit-mask-position: 4px 4px;
	mask-repeat: no-repeat;
	-webkit-mask-repeat: no-repeat;
}
button.secondary span.border{
	content: '';
	position: absolute;
	top: -4px; bottom: -4px;
    left: -4px; right: -4px;
	background-image:var(--bluegradient);
	transition: 0.6s cubic-bezier(0.25, 1, 0.5, 1);
}
/* shadow */
button.secondary span.shadow{
	content: '';
	position: absolute;
	top: 0px; bottom: 0px;
    left: 0px; right: 0px;
	border-radius: 32px;
	background-image:var(--bluegradient);
	opacity: 0;
	filter: blur(8px);
	transition: 0.3s cubic-bezier(0.25, 1, 0.5, 1);
	transform: scale(0.9, 0.9);
	transform-style: preserve-3d;
}
button.secondary:hover span.shadow{
	opacity: 0.35;
	filter: blur(12px);
	transform: scale(1.05, 1.1);
	background-position: 0% 50%;
	transition: 0.5s 0.2s cubic-bezier(0.34, 1.56, 0.64, 1);
}
/* @media only screen and (max-width: 560px) {
	button.secondary{
		transform: scale(0.75);
		transform-origin: left top;
	}
	button.secondary.center{
		transform-origin: center;
	}
	button.secondary:hover{
		transform: scale(0.8);
	}
} */


  /* =============== */
 /*   Nav   */
/* ============= */
header{
	width: 100%;
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	justify-content: space-between;
	padding: 32px 24px;
	position: fixed;
	z-index: 999;
}
header::after{
	content: '';
	width: 100%;
	height: 128px;
	position: fixed;
	top: 0px;
	left: 0px;
	right: 0px;
	z-index: -2;
	background: url('../static/img/backgroundGradient.png'), rgba(255,255,255,0.65);
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: top center;
    backdrop-filter: blur(24px);
}

header .websiteName{
	width: 180px;
	background-size: 200%;
	color: var(--darkblue);
	background-image:  linear-gradient(
		110deg,
		hsl(180deg 100% 50%) 0%,
		hsl(200deg 100% 40%) 49.9%,
		hsl(227deg 71% 25%) 50%,
		hsl(227deg 71% 25%) 100%,
		);
	background-position: 100% 50%;
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
	transform: scale(1);
	transform-origin: center left;
	cursor: pointer;
	transition: 0.2s cubic-bezier(0.25, 1, 0.5, 1);
}
header .websiteName:hover{
	transform: scale(1.1);
	background-position: 0% 50%;
	transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
}
header .websiteName:active{
	transform: scale(0.9);
	transition: 0.2s cubic-bezier(0.25, 1, 0.5, 1);
}
header a{
	font-family: "Poppins", "Avenir", "Avenir Next", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
	font-size: 24px;
	color: var(--darkblue);
	text-decoration: none;
	font-weight: 800;
	line-height: 64px;
	text-transform: uppercase;
}
.WIPbanner{
	background:hsl(180deg 80% 50%);
    float: right;
    text-align: center;
    color: #fff;
	-webkit-text-fill-color: #fff;
	font-size: 14px;
    font-family: Poppins,Avenir,"Avenir Next",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
    font-weight: 600;
    letter-spacing: .6px;
	line-height: 28px;
	padding: 0px 4px;
	border-radius:16px;
    width: 56px;
    height: 28px;
	margin: 18px 0px;
	position: relative;
	left: -12px;
}
@media only screen and (max-width: 560px) {
	header{
		position: absolute;
		padding: 24px 16px;
	}
	header::after{
		position: absolute;
		background: white;
		height: 96px;
	}
	header .websiteName{
		line-height: 48px;
	}
	header a.CTA{
		position: fixed;
		right: 12px;
		top: 12px;
		/* transform: scale(0.75);
		transform-origin: center right; */
	}
	header nav{
		display: none;
	}
	.WIPbanner{
		margin: 10px 0px;
		transform: scale(0.8);
		transform-origin: center left;
	}

}
nav ul{
	list-style: none;
	padding: 0;
	margin: 0;
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;
	justify-content: center;
}
nav ul a{
	display: block;
	text-decoration: none;
	font-family: "Poppins", "Avenir", "Avenir Next", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
	font-size: 20px;
	line-height: 64px;
	color: var(--darkblue);
	text-decoration: none;
	text-transform: uppercase;
	padding: 0px 16px;
	font-weight: 800;
	position: relative;
	background-size: 200%;
	background-image:  linear-gradient(
		110deg,
		hsl(180deg 100% 50%) 0%,
		hsl(200deg 100% 40%) 49.9%,
		hsl(227deg 71% 25%) 50%,
		hsl(227deg 71% 25%) 100%,
		);
	background-position: 100% 50%;
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
	transform: scale(1);
	transition: 0.2s cubic-bezier(0.25, 1, 0.5, 1);
}
nav ul li:hover a{
	transform: scale(1.1);
	background-position: 0% 50%;
	transition: 0.4s cubic-bezier(0.25, 1, 0.5, 1);
}

nav ul li:active a{
	transform: scale(0.9);
	transition: 0.2s cubic-bezier(0.25, 1, 0.5, 1);
}

  /* =============== */
 /*   Home Page Layout   */
/* ============= */
main{
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	/* overflow-x: hidden; */
}

section{
	width: 100%;
	max-width: 960px;
	margin-bottom: 64px;
	position: relative;
	scroll-margin-top: 160px;
}
section.workPiece{
	margin-bottom: 240px;
}
/* ... */

